fix: implement beginnings of basic drawer

--- a/demo/index.html
+++ b/demo/index.html
@@ -6,6 +6,7 @@
     <script type="module">
       import '../src/rhack-image-helper.js';
     </script>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <rhack-image-helper></rhack-image-helper>
