fix: implment generalized look and feel

--- a/demo/index.html
+++ b/demo/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
-    <rhack-image-helper></rhack-image-helper>
+    <rhack-image-helper
+      api-key="Tbcy97G7yu1wsxT6b8OeD5a60NBDiRuO31BL2mqw"
+      endpoint="https://22ms9xsh4k.execute-api.us-east-1.amazonaws.com/prod"
+    ></rhack-image-helper>
   </body>
 </html>
